--- a/_manifest.json
+++ b/_manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "bisc002",
-    "short_name": "bisc002",
-    "description": "",
+    "name": "{{ title }}",
+    "short_name": "{{ short }}",
+    "description": "{{ description }}",
     "icons": [
         {
             "src": "assets\/android-icon-36x36.png",
@@ -46,9 +46,9 @@
             "density": "4.0"
         }
     ],
-    "scope": "/bisc002/",
-    "start_url": "/bisc002/",
+    "scope": "{{ basePath }}",
+    "start_url": "{{ basePath }}",
     "display": "standalone",
-    "theme_color": "#aeff00",
-    "background_color": "#aeff00"
+    "theme_color": "{{ hexCode }}",
+    "background_color": "{{ hexCode }}"
 }
